--- a/app/src/main/res/layout/layout_editlabel.xml
+++ b/app/src/main/res/layout/layout_editlabel.xml
@@ -37,7 +37,7 @@
         android:id="@+id/drag_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:paddingTop="15dp" />
 
     <TextView
         android:id="@+id/tv_more"
